클릭시 몬스터 나타내기 리뷰

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head>
     <body>
-        <div class="game_container">
-            <div class="map_stone">
+        <div class="game-container">
+            <div class="map-stone">
                 <div class="stage">
                     <div class="monster">
-                        <div class="monster_stone">
+                        <div class="monster-stone">
                             <img src="./images/monster.png" />
                         </div>
                     </div>
                 </div>
-                <ul class="create_monster">
-                    <li><img src="./images/monster.png" /></li>
-                    <li><img src="./images/monster.png" /></li>
-                    <li><img src="./images/monster.png" /></li>
-                    <li><img src="./images/monster.png" /></li>
-                    <li><img src="./images/monster.png" /></li>
+                <ul class="create-monster">
+                    <li class="monster-button"><img src="./images/monster.png" /></li>
+                    <li class="monster-button"><img src="./images/monster.png" /></li>
+                    <li class="monster-button"><img src="./images/monster.png" /></li>
+                    <li class="monster-button"><img src="./images/monster.png" /></li>
+                    <li class="monster-button"><img src="./images/monster.png" /></li>
                 </ul>
             </div>
         </div>
