--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>디펜스</title>
         <link rel="stylesheet" type="text/css" href="./style.css" />
+        <link rel="stylesheet" type="text/css" href="./reset.css" />
     </head>
     <body>
         <div class="game-container">
