이슈 2번 완료

--- a/index.html
+++ b/index.html
@@ -9,18 +9,36 @@
         <div class="game-container">
             <div class="map-stone">
                 <div class="stage">
-                    <div class="monster">
-                        <div class="monster-stone">
-                            <img src="./images/monster.png" />
+                    <div class="tower-computer">
+                        <progress value="20" max="100"></progress>
+                        <img src="./images/tower-computer.png" />
+                    </div>
+                    <div class="tower-user">
+                        <progress value="20" max="100"></progress>
+                        <img src="./images/tower-user.png" />
+                        <div class="monster">
+                            <div class="monster-stone">
+                                <img src="./images/monster.png" />
+                            </div>
                         </div>
                     </div>
                 </div>
                 <ul class="create-monster">
-                    <li class="monster-button"><img src="./images/monster.png" /></li>
-                    <li class="monster-button"><img src="./images/monster.png" /></li>
-                    <li class="monster-button"><img src="./images/monster.png" /></li>
-                    <li class="monster-button"><img src="./images/monster.png" /></li>
-                    <li class="monster-button"><img src="./images/monster.png" /></li>
+                    <li class="monster-button">
+                        <img src="./images/monster.png" />
+                    </li>
+                    <li class="monster-button">
+                        <img src="./images/monster.png" />
+                    </li>
+                    <li class="monster-button">
+                        <img src="./images/monster.png" />
+                    </li>
+                    <li class="monster-button">
+                        <img src="./images/monster.png" />
+                    </li>
+                    <li class="monster-button">
+                        <img src="./images/monster.png" />
+                    </li>
                 </ul>
             </div>
         </div>
