--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 </ul>
             </div>
         </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
         <script type="text/javascript" src="./script.js"></script>
+
     </body>
 </html>
