주석 추가, 몬스터 생성

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
                     <div class="tower-user">
                         <progress value="20" max="100"></progress>
                         <img src="./images/tower-user.png" />
-                        <div class="monster">
-                            <div class="monster-stone">
-                                <img src="./images/monster.png" />
-                            </div>
-                        </div>
+                        <div class="monsters"></div>
                     </div>
                 </div>
                 <ul class="create-monster">
@@ -42,8 +38,7 @@
                 </ul>
             </div>
         </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
         <script type="text/javascript" src="./script.js"></script>
-
     </body>
 </html>
